Remove example and agent files, update imports
Deleted all files in the Examples directory, SERVICE_LAYER_README.md, and src/Core/Agent.cs to clean up unused code and documentation. Updated import statements across source files to remove references to Lmss.Models where not needed, and adjusted project file to exclude .examples instead of Examples. Renamed logo.png to .docs/logo.png and updated README accordingly.

--- a/Lmss.csproj
+++ b/Lmss.csproj
@@ -53,10 +53,10 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Compile Remove="Examples\**"/>
-        <None Remove="Examples\**"/>
-        <Content Remove="Examples\**"/>
-        <EmbeddedResource Remove="Examples\**"/>
+        <Compile Remove=".examples\**"/>
+        <None Remove=".examples\**"/>
+        <Content Remove=".examples\**"/>
+        <EmbeddedResource Remove=".examples\**"/>
     </ItemGroup>
 
     <ItemGroup>
