--- a/Lmss.csproj
+++ b/Lmss.csproj
@@ -6,7 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageId>tcs.LmsSharp</PackageId>
+        <PackageId>LmsSharp</PackageId>
         <Version>1.0.3</Version>
         <Authors>Damon</Authors>
         <Company>TCS</Company>
