Add CI workflow and update project metadata
Introduced a GitHub Actions workflow for .NET CI builds and tests. Updated Lmss.csproj to include the workflow file as content. Refreshed README with badges and streamlined documentation. Updated logo image.

--- a/Lmss.csproj
+++ b/Lmss.csproj
@@ -38,6 +38,7 @@
 
     <ItemGroup>
         <Compile Remove=".examples\**"/>
+        <Content Include=".github\workflows\build.yml" />
         <None Remove=".examples\**"/>
         <Content Remove=".examples\**"/>
         <EmbeddedResource Remove=".examples\**"/>
