Add release tagging workflow and update project config
Introduces a PowerShell script and GitHub Actions workflow for tagging releases and publishing assets. Updates Lmss.csproj to version 1.0.4, adds new content files, and fixes a path typo in bump-version.ps1.

--- a/Lmss.csproj
+++ b/Lmss.csproj
@@ -1,55 +1,51 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
+    <LangVersion>latest</LangVersion>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>LmsSharp</PackageId>
+    <Version>1.0.4</Version>
+    <Authors>Damon</Authors>
+    <Company>TCS</Company>
+    <Product>LmsSharp</Product>
+    <AssemblyName>LmsSharp</AssemblyName>
+    <Description>A lightweight .NET client library for interacting with LM Studio's local LLM server API. Supports chat completions, model management, structured output, and tool use.</Description>
+    <PackageTags>lmstudio;llm;ai;chat;client;local;api;openai-compatible</PackageTags>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <PackageProjectUrl>https://github.com/Ddemon26/Lmss</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/Ddemon26/Lmss</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+  </PropertyGroup>
+  <Target Name="AddPackageDefines" BeforeTargets="Compile">
     <PropertyGroup>
-        <TargetFrameworks>netstandard2.0;net8.0</TargetFrameworks>
-        <LangVersion>latest</LangVersion>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-        <PackageId>LmsSharp</PackageId>
-        <Version>1.0.3</Version>
-        <Authors>Damon</Authors>
-        <Company>TCS</Company>
-        <Product>LmsSharp</Product>
-        <AssemblyName>LmsSharp</AssemblyName>
-        <Description>A lightweight .NET client library for interacting with LM Studio's local LLM server API. Supports chat completions, model management, structured output, and tool use.</Description>
-        <PackageTags>lmstudio;llm;ai;chat;client;local;api;openai-compatible</PackageTags>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageProjectUrl>https://github.com/Ddemon26/Lmss</PackageProjectUrl>
-        <RepositoryUrl>https://github.com/Ddemon26/Lmss</RepositoryUrl>
-        <RepositoryType>git</RepositoryType>
-        <PackageReadmeFile>README.md</PackageReadmeFile>
-        <IncludeSymbols>true</IncludeSymbols>
-        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+      <DefineConstants>$(DefineConstants);%(PackageReference.Define)</DefineConstants>
     </PropertyGroup>
-    
-
-    <Target Name="AddPackageDefines" BeforeTargets="Compile">
-        <PropertyGroup>
-            <DefineConstants>$(DefineConstants);%(PackageReference.Define)</DefineConstants>
-        </PropertyGroup>
-    </Target>
-
-    <ItemGroup>
-        <PackageReference Include="IsExternalInit" Version="1.0.3" PrivateAssets="all"/>
-        <PackageReference Include="IndexRange" Version="1.0.3" PrivateAssets="all"/>
-        <PackageReference Include="System.Net.Http.Json" Version="9.0.8"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <Compile Remove=".examples\**"/>
-        <Content Include=".github\workflows\build.yml" />
-        <None Remove=".examples\**"/>
-        <Content Remove=".examples\**"/>
-        <EmbeddedResource Remove=".examples\**"/>
-    </ItemGroup>
-
-    <ItemGroup>
-        <None Include="README.md" Pack="true" PackagePath="\"/>
-        <None Include="LICENSE" Pack="true" PackagePath="\"/>
-    </ItemGroup>
-
-    <PropertyGroup>
-        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
-    </PropertyGroup>
+  </Target>
+  <ItemGroup>
+    <PackageReference Include="IsExternalInit" Version="1.0.3" PrivateAssets="all" />
+    <PackageReference Include="IndexRange" Version="1.0.3" PrivateAssets="all" />
+    <PackageReference Include="System.Net.Http.Json" Version="9.0.8" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove=".examples\**" />
+    <Content Include=".github\ReleaseTagAtCommit.ps1" />
+    <Content Include=".github\workflows\build.yml" />
+    <Content Include=".github\workflows\release-tagged.yml" />
+    <None Remove=".examples\**" />
+    <Content Remove=".examples\**" />
+    <EmbeddedResource Remove=".examples\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" Pack="true" PackagePath="\" />
+    <None Include="LICENSE" Pack="true" PackagePath="\" />
+  </ItemGroup>
+  <PropertyGroup>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+  </PropertyGroup>
 </Project>
