--- a/Lmss.csproj
+++ b/Lmss.csproj
@@ -34,12 +34,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Remove=".examples\**" />
-    <Content Include=".github\ReleaseTagAtCommit.ps1" />
-    <Content Include=".github\workflows\build.yml" />
-    <Content Include=".github\workflows\release-tagged.yml" />
     <None Remove=".examples\**" />
     <Content Remove=".examples\**" />
     <EmbeddedResource Remove=".examples\**" />
+    <None Remove=".github\**" />
+    <Content Remove=".github\**" />
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" Pack="true" PackagePath="\" />
