--- a/.github/workflows/release-tagged.yml
+++ b/.github/workflows/release-tagged.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Create Release and Upload Assets
         run: |
           gh release create ${{ github.ref_name }} \
-            --title "Release ${{ github.ref_name }}" \
+            --title "${{ github.ref_name }}" \
             --generate-notes \
             lmssharp-*.zip
         env:
